# boundless-write

./: .gitignore  BUILD_STATUS.md  BWE_Architecture.mmd  CLAUDE.md  COMPLETION_SUMMARY.md  CONTINUATION_SESSION_2.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_GUIDE.md  FEATURES.md  FINAL_INSTALLATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALL.md  INSTALLATION_COMPLETE.md  KEYBOARD_SHORTCUTS.md  NATIVE_LIBRARY_SETUP.md  PHASE1_CHECKLIST.md  PHASE1_COMPLETE.md  PROGRESS_UPDATE.md  QUICKSTART.md  README.md  README_COMPLETE.md  RUN_BOUNDLESSWRITE.sh  RUST_BUILD_COMPLETE.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  SPLASH_SCREEN.md  boundlesswrite.desktop  setup-linux.sh  setup-macos.sh  setup-windows.bat  setup.sh
bwe_core/: Cargo.toml
bwe_core/src/: arithmetic.rs  doc_graph.rs  ffi.rs  lib.rs  optimizer.rs  parser.rs  signature.rs  storage.rs
bwe_ui/: README.md  pubspec.yaml
bwe_ui/android/app/: build.gradle.kts
bwe_ui/android/app/src/main/: AndroidManifest.xml
bwe_ui/lib/: main.dart
bwe_ui/lib/providers/: document_provider.dart  formatting_provider.dart
bwe_ui/lib/screens/: home_screen.dart  splash_screen.dart
bwe_ui/lib/services/: keyboard_shortcuts.dart  native_bridge.dart
bwe_ui/lib/widgets/: editor_area.dart  formatting_toolbar.dart  menu_bar.dart  sidebar.dart
bwe_ui/linux/: CMakeLists.txt  my_application.cc
bwe_ui/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
bwe_ui/test/: ffi_integration_test.dart  widget_test.dart
bwe_ui/windows/: CMakeLists.txt
bwe_ui/windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
