[package]
name = "bwe_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
curve25519-dalek = "4.0"
aes = "0.8"
block-modes = "0.9"
hex = "0.4"
lazy_static = "1.4"
